--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Javascript library for interacting with the dYdX Protocol",
-  "main": "dist/es/index.ts",
+  "main": "dist/js/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc && babel dist/es --out-dir dist/js",
+    "start": "node dist/js/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,18 @@
   },
   "homepage": "https://github.com/dydxexchange/dydx.js#readme",
   "dependencies": {
-    "@dydxprotocol/protocol": "0.0.10",
-    "bignumber.js": "^7.0.1",
+    "@dydxprotocol/protocol": "0.0.13",
+    "bignumber.js": "^4.1.0",
     "bluebird": "^3.5.1",
     "ethereumjs-util": "^5.2.0",
+    "truffle-contract": "^3.0.5",
     "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "typescript": "^2.8.3"
   }
 }
