--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/index.js",
   "types": "dist/types/index.d.ts",
@@ -24,8 +24,9 @@
     "bignumber.js": "^4.1.0",
     "bluebird": "^3.5.1",
     "ethereumjs-util": "^5.2.0",
+    "ethjs": "^0.4.0",
     "truffle-contract": "^3.0.5",
-    "web3": "^1.0.0-beta.34"
+    "web3-utils": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
