--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.0.9",
+  "version": "0.0.15",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/index.js",
   "types": "dist/types/index.d.ts",
+  "files": [
+    "dist/",
+    "src/"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && babel dist/es --out-dir dist/js --source-maps inline",
+    "build": "tsc",
     "start": "node dist/js/index.js",
     "prepublishOnly": "npm run build"
   },
@@ -21,7 +25,7 @@
   },
   "homepage": "https://github.com/dydxexchange/dydx.js#readme",
   "dependencies": {
-    "@dydxprotocol/protocol": "0.1.0",
+    "@dydxprotocol/protocol": "0.1.1",
     "bignumber.js": "^4.1.0",
     "bluebird": "^3.5.1",
     "ethereumjs-util": "^5.2.0",
@@ -30,10 +34,6 @@
     "web3-utils": "^1.0.0-beta.34"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
     "typescript": "^2.8.3"
   }
 }
