--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "moduleResolution": "node",
     "target": "es5",
-    "module":"es2015",
+    "module": "commonjs",
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "strict": false,
     "sourceMap": true,
     "declaration": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "declarationDir": "dist/types",
-    "outDir": "dist/es",
+    "outDir": "dist/js",
     "typeRoots": [
       "node_modules/@types"
     ]
