--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "web3-utils": "^1.0.0-beta.34"
   },
   "devDependencies": {
-    "typescript": "^2.8.3"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "jest": "^23.4.1",
+    "typescript": "^2.8.3",
+    "web3": "^0.20.6"
   }
 }
