--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "src/"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --forceExit --runInBand",
     "build": "tsc",
     "start": "node dist/js/index.js",
     "prepublishOnly": "npm run build"
@@ -27,17 +27,20 @@
   "dependencies": {
     "@dydxprotocol/protocol": "0.1.3",
     "bignumber.js": "^4.1.0",
-    "bluebird": "^3.5.1",
+    "chai-bignumber": "^2.0.2",
     "ethereumjs-util": "^5.2.0",
     "ethjs": "^0.4.0",
-    "truffle-contract": "^3.0.5",
-    "web3-utils": "^1.0.0-beta.34"
+    "truffle-contract": "^3.0.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bluebird": "^3.5.1",
+    "chai": "^4.1.2",
+    "ethjs-util": "^0.1.6",
     "jest": "^23.4.1",
     "typescript": "^2.8.3",
-    "web3": "^0.20.6"
+    "web3": "^0.20.6",
+    "web3-utils": "^1.0.0-beta.34"
   }
 }
