--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "src/"
   ],
   "scripts": {
-    "test": "NODE_ENV=test jest --forceExit --runInBand",
+    "test": "ts-node src/createPosition.ts",
     "build": "tsc",
     "start": "node dist/js/index.js",
     "prepublishOnly": "npm run build"
@@ -30,15 +30,19 @@
     "chai-bignumber": "^2.0.2",
     "ethereumjs-util": "^5.2.0",
     "ethjs": "^0.4.0",
-    "truffle-contract": "^3.0.5"
+    "solc": "^0.4.24",
+    "truffle-contract": "^3.0.5",
+    "zeppelin-solidity": "^1.10.0"
   },
   "devDependencies": {
+    "@types/node": "^10.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "ethjs-util": "^0.1.6",
     "jest": "^23.4.1",
+    "ts-node": "^7.0.0",
     "typescript": "^2.8.3",
     "web3": "^0.20.6",
     "web3-utils": "^1.0.0-beta.34"
