--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "outDir": "dist/js",
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
+    "types": ["node"],
   },
   "include": [
     "src"
