--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/dydxexchange/dydx.js#readme",
   "dependencies": {
     "@dydxprotocol/protocol": "0.1.4",
+    "abi-decoder": "^1.1.0",
     "bignumber.js": "^4.1.0",
     "chai-bignumber": "^2.0.2",
     "ethereumjs-util": "^5.2.0",
