--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "src/"
   ],
   "scripts": {
-    "fakeTest": "ts-node src/createPosition",
     "test": "jest",
     "build": "tsc",
+    "lint": "tslint --fix --project .",
     "start": "node dist/js/index.js",
     "debug": "truffle debug",
     "prepublishOnly": "npm run build"
@@ -47,7 +47,9 @@
     "jest": "^23.4.1",
     "ts-jest": "^23.0.1",
     "ts-node": "^7.0.0",
-    "typescript": "^2.8.3",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.9.2",
+    "typescript": "^2.9.2",
     "web3": "^0.20.6",
     "web3-utils": "^1.0.0-beta.34"
   }
