--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": false,
     "sourceMap": true,
     "declaration": true,
+    "noUnusedLocals": true,
     "esModuleInterop": true,
     "declarationDir": "dist/types",
     "outDir": "dist/js",
