--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "src/"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
+    "coverage": "echo \"Error: no coverage specified\"",
+    "lint": "echo \"Error: no linter specified\"",
     "build": "tsc",
-    "start": "node dist/js/index.js",
-    "prepublishOnly": "npm run build"
+    "start": "node dist/js/index.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "web3-utils": "^1.0.0-beta.34"
   },
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "typescript": "^2.8.3"
   }
 }
