--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "tslint-config-airbnb": "^5.9.2",
     "typescript": "^2.9.2",
     "web3": "^0.20.6",
-    "web3-utils": "^1.0.0-beta.34"
+    "web3-utils": "^1.0.0-beta.34",
     "coveralls": "^3.0.2",
     "typescript": "^2.8.3"
   }
