--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "tslint --project . -t verbose",
     "start": "node dist/js/index.js",
     "debug": "truffle debug",
+    "coverage": "echo \"Error: no coverage specified\"",
     "prepublishOnly": "npm run build"
   },
   "repository": {
