--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.2",
     "ethjs-util": "^0.1.6",
     "jest": "^23.4.1",
     "ts-jest": "^23.0.1",
