--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/index.js",
   "types": "dist/types/index.d.ts",
@@ -44,6 +44,7 @@
     "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
+    "dotenv-flow": "0.1.0-beta.3",
     "ethjs-util": "^0.1.6",
     "jest": "^23.4.1",
     "ts-jest": "^23.0.1",
