--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bignumber.js": "^4.1.0",
     "chai-bignumber": "^2.0.2",
     "dotenv": "^6.0.0",
+    "es6-promisify": "^6.0.0",
     "ethereumjs-util": "^5.2.0",
     "ethjs": "^0.4.0",
     "truffle-contract": "^3.0.5"
