--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.1.22",
+  "version": "0.1.23",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/src/index.js",
   "types": "dist/types/index.d.ts",
@@ -30,17 +30,18 @@
     "@dydxprotocol/protocol": "0.1.13",
     "abi-decoder": "^1.1.0",
     "bignumber.js": "^4.1.0",
+    "bluebird": "^3.5.1",
     "chai-bignumber": "^2.0.2",
     "dotenv": "^6.0.0",
     "ethereumjs-util": "^5.2.0",
     "ethjs": "^0.4.0",
-    "truffle-contract": "^3.0.5"
+    "truffle-contract": "^3.0.5",
+    "web3": "^0.20.6"
   },
   "devDependencies": {
     "@types/node": "^10.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "bluebird": "^3.5.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
     "dotenv-flow": "0.1.0-beta.3",
@@ -50,7 +51,6 @@
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.9.2",
     "typescript": "^2.9.2",
-    "web3": "^0.20.6",
     "web3-utils": "^1.0.0-beta.34"
   }
 }
