--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
   test:
     docker:
       - image: circleci/node:9.11.1
-      - image: dydxprotocol/protocol:latest
+      - image: dydxprotocol/protocol:v0.2.4
     working_directory: ~/build
     steps:
       - restore_cache:
