--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
   protocol:
-    image: dydxprotocol/protocol:latest
+    image: dydxprotocol/protocol:v0.2.4
     ports:
       - 8545:8545
