--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/src/index.js",
   "types": "dist/types/index.d.ts",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/dydxexchange/dydx.js#readme",
   "dependencies": {
-    "@dydxprotocol/protocol": "0.1.13",
+    "@dydxprotocol/protocol": "0.2.4",
     "abi-decoder": "^1.1.0",
     "bignumber.js": "^4.1.0",
     "bluebird": "^3.5.1",
@@ -35,22 +35,22 @@
     "dotenv": "^6.0.0",
     "ethereumjs-util": "^5.2.0",
     "ethjs": "^0.4.0",
-    "truffle-contract": "^3.0.5",
-    "web3": "^0.20.6"
+    "truffle-contract": "^3.0.6",
+    "web3": "0.20.6"
   },
   "devDependencies": {
-    "@types/node": "^10.5.2",
+    "@types/node": "^10.5.8",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
-    "dotenv-flow": "0.1.0-beta.3",
+    "dotenv-flow": "0.1.0",
     "ethjs-util": "^0.1.6",
-    "jest": "^23.4.1",
-    "ts-jest": "^23.0.1",
+    "jest": "^23.5.0",
+    "ts-jest": "^23.1.3",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.9.2",
     "typescript": "^2.9.2",
-    "web3-utils": "^1.0.0-beta.34"
+    "web3-utils": "^1.0.0-beta.35"
   }
 }
