--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.1.24",
+  "version": "0.1.25",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/src/index.js",
   "types": "dist/types/index.d.ts",
@@ -36,7 +36,8 @@
     "ethereumjs-util": "^5.2.0",
     "ethjs": "^0.4.0",
     "truffle-contract": "^3.0.6",
-    "web3": "0.20.6"
+    "web3": "0.20.6",
+    "web3-utils": "^1.0.0-beta.35"
   },
   "devDependencies": {
     "@types/node": "^10.5.8",
@@ -50,7 +51,6 @@
     "ts-jest": "^23.1.3",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.9.2",
-    "typescript": "^2.9.2",
-    "web3-utils": "^1.0.0-beta.35"
+    "typescript": "^2.9.2"
   }
 }
