--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.1.25",
+  "version": "0.2.0",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/src/index.js",
   "types": "dist/types/index.d.ts",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/dydxexchange/dydx.js#readme",
   "dependencies": {
-    "@dydxprotocol/protocol": "0.2.4",
+    "@dydxprotocol/protocol": "0.2.7",
     "abi-decoder": "^1.1.0",
     "bignumber.js": "^4.1.0",
     "bluebird": "^3.5.1",
@@ -40,10 +40,10 @@
     "web3-utils": "^1.0.0-beta.35"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "@types/node": "^10.5.8",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "chai": "^4.1.2",
     "coveralls": "^3.0.2",
     "dotenv-flow": "0.1.0",
     "ethjs-util": "^0.1.6",
