--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "types": ["node"],
+    "types": ["node", "jest"],
   },
   "include": [
     "src",
