--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,11 +55,25 @@ jobs:
       - restore_cache:
           key: build-{{ .Environment.CIRCLE_SHA1 }}
       - run:
-          name: Wait for contracts to be deployed
-          command: sleep 15
+          name: Wait for ganache to start
+          command: sleep 4
       - run:
           name: Test
           command: npm test
+  coverage:
+    docker:
+      - image: circleci/node:9.11.1
+      - image: dydxprotocol/protocol:v0.2.10
+    working_directory: ~/build
+    steps:
+      - restore_cache:
+          key: build-{{ .Environment.CIRCLE_SHA1 }}
+      - run:
+          name: Wait for ganache to start
+          command: sleep 4
+      - run:
+          name: Coverage
+          command: npm run coverage -- --coverageReporters=text-lcov | node_modules/.bin/coveralls
   publish:
     docker:
       - image: circleci/node:9.11.1
@@ -81,6 +95,9 @@ workflows:
     jobs:
       - checkout_and_install
       - test:
+          requires:
+            - checkout_and_install
+      - coverage:
           requires:
             - checkout_and_install
       - lint:
