--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/src/index.js",
   "types": "dist/types/index.d.ts",
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/dydxexchange/dydx.js#readme",
   "dependencies": {
     "@dydxprotocol/protocol": "0.2.10",
+    "@types/bluebird": "^3.5.23",
     "abi-decoder": "^1.1.0",
     "bignumber.js": "^4.1.0",
     "bluebird": "^3.5.1",
