--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/src/index.js",
   "types": "dist/types/index.d.ts",
@@ -28,17 +28,22 @@
   "homepage": "https://github.com/dydxexchange/dydx.js#readme",
   "dependencies": {
     "@dydxprotocol/protocol": "0.2.11",
-    "@types/bluebird": "^3.5.23",
     "bignumber.js": "^4.1.0",
     "bluebird": "^3.5.1",
+    "decimal.js": "^10.0.1",
     "ethereumjs-util": "^5.2.0",
     "ethjs": "^0.4.0",
+    "luxon": "^1.3.3",
     "truffle-contract": "^3.0.6",
     "web3": "0.20.6",
     "web3-utils": "^1.0.0-beta.35"
   },
   "devDependencies": {
+    "@types/bignumber.js": "^5.0.0",
+    "@types/bluebird": "^3.5.23",
+    "@types/decimal.js": "^7.4.0",
     "@types/jest": "^23.3.1",
+    "@types/luxon": "^1.2.2",
     "@types/node": "^10.7.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
