--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,31 +49,25 @@ jobs:
   test:
     docker:
       - image: circleci/node:9.11.1
-      - image: dydxprotocol/protocol:v0.2.13
+      - image: dydxprotocol/protocol:v0.2.14
     working_directory: ~/build
     steps:
       - restore_cache:
           key: build-{{ .Environment.CIRCLE_SHA1 }}
       - run:
-          name: Wait for ganache to start
-          command: sleep 4
-      - run:
           name: Test
-          command: npm test
+          command: GANACHE_URL=http://0.0.0.0:8545 npm test
   coverage:
     docker:
       - image: circleci/node:9.11.1
-      - image: dydxprotocol/protocol:v0.2.13
+      - image: dydxprotocol/protocol:v0.2.14
     working_directory: ~/build
     steps:
       - restore_cache:
           key: build-{{ .Environment.CIRCLE_SHA1 }}
       - run:
-          name: Wait for ganache to start
-          command: sleep 4
-      - run:
           name: Coverage
-          command: npm run coverage -- --coverageReporters=text-lcov | node_modules/.bin/coveralls
+          command: GANACHE_URL=http://0.0.0.0:8545 npm run coverage -- --coverageReporters=text-lcov | node_modules/.bin/coveralls
   publish:
     docker:
       - image: circleci/node:9.11.1
