--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,79 +2,79 @@ version: 2
 jobs:
   checkout_and_install:
     docker:
-      - image: circleci/node:9.11.1
+      - image: dydxprotocol/node:8.12-alpine-v1
     working_directory: ~/build
     steps:
       - checkout
       - restore_cache:
           keys:
-            - dependency-cache-{{ .Branch }}-{{ checksum "package-lock.json" }}
-            - dependency-cache-{{ .Branch }}-
-            - dependency-cache-
+            - dependency-cache-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            - dependency-cache-v1-{{ .Branch }}-
+            - dependency-cache-v1-
       - run:
           name: Install Dependencies
-          command: npm install --quiet
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc && npm ci
       - save_cache:
-          key: dependency-cache-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          key: dependency-cache-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
-            - node_modules
+            - "$HOME/.npm"
       - save_cache:
-          key: build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/build
   lint:
     docker:
-      - image: circleci/node:9.11.1
+      - image: dydxprotocol/node:8.12-alpine-v1
     working_directory: ~/build
     steps:
       - restore_cache:
-          key: build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Lint
           command: npm run lint
   build:
     docker:
-      - image: circleci/node:9.11.1
+      - image: dydxprotocol/node:8.12-alpine-v1
     working_directory: ~/build
     steps:
       - restore_cache:
-          key: build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Build
           command: npm run build
       - save_cache:
-          key: completed-build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-completed-build-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/build
   test:
     docker:
-      - image: circleci/node:9.11.1
-      - image: dydxprotocol/protocol:v0.2.19
+      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/protocol:v0.2.21
     working_directory: ~/build
     steps:
       - restore_cache:
-          key: build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Test
           command: GANACHE_URL=http://0.0.0.0:8545 npm test
   coverage:
     docker:
-      - image: circleci/node:9.11.1
-      - image: dydxprotocol/protocol:v0.2.19
+      - image: dydxprotocol/node:8.12-alpine-v1
+      - image: dydxprotocol/protocol:v0.2.21
     working_directory: ~/build
     steps:
       - restore_cache:
-          key: build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Coverage
           command: GANACHE_URL=http://0.0.0.0:8545 npm run coverage -- --coverageReporters=text-lcov | node_modules/.bin/coveralls
   publish:
     docker:
-      - image: circleci/node:9.11.1
+      - image: dydxprotocol/node:8.12-alpine-v1
     working_directory: ~/build
     steps:
       - restore_cache:
-          key: completed-build-{{ .Environment.CIRCLE_SHA1 }}
+          key: cache-completed-build-{{ .Environment.CIRCLE_SHA1 }}
       - add_ssh_keys:
           fingerprints:
             - "94:6a:1c:a9:10:70:65:45:5f:a9:1c:8b:ec:fa:ca:ec"
