--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/index.js",
   "types": "dist/types/index.d.ts",
@@ -35,7 +35,7 @@
     "ethjs": "^0.4.0",
     "luxon": "^1.3.3",
     "truffle-contract": "^3.0.6",
-    "web3": "0.20.6",
+    "web3": "git://github.com/prettymuchbryce/web3.js.git#v0.20.6",
     "web3-utils": "^1.0.0-beta.36"
   },
   "devDependencies": {
