Reformatted Tests and added code for longs (#89)
* added createCappedLong func to leveraged tokens

* reformatted tests and added leveraged long (w/o test)

* all tests pass

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "types": ["node", "jest", "bluebird", "bignumber.js", "decimal.js", "luxon"],
   },
   "include": [
-    "src"
+    "src",
+    "__tests__",
   ],
   "compileOnSave": true
 }
