--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dydxprotocol/dydx.js",
-  "version": "0.9.12",
+  "version": "0.9.13",
   "description": "Javascript library for interacting with the dYdX Protocol",
   "main": "dist/js/index.js",
   "types": "dist/types/index.d.ts",
@@ -37,7 +37,7 @@
     "luxon": "^1.3.3",
     "truffle-contract": "^3.0.6",
     "web3": "git://github.com/prettymuchbryce/web3.js.git#v0.20.6",
-    "web3-utils": "^1.0.0-beta.36"
+    "web3-utils": "1.0.0-beta.36"
   },
   "devDependencies": {
     "@digix/tempo": "^0.2.0",
